k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pace
spec:
  replicas: 1
  template:
    metadata:
      labels:
        use: app
    spec:
      containers:
      - name: pace
        image: localhost:32000/pace2:latest
        ports:
          - containerPort: 3000
