k8s/base/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  template:
    metadata:
      labels:
        use: redis
    spec:
      containers:
        - name: pace
          image: localhost:32000/pace2-worker:latest
