k8s/base/redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  labels:
    db: redis
spec:
  containers:
  - name: redis
    image: redis:5.0.4
    ports:
      - containerPort: 6379
    command:
      - redis-server
      - "/redis-master/redis.conf"
    resources:
      limits:
        cpu: "0.1"
    volumeMounts:
    - mountPath: /redis-master-data
      name: data
    - mountPath: /redis-master
      name: config
  volumes:
    - name: data
      emptyDir: {}
    - name: config
      configMap:
        name: redis-config
        items:
        - key: redis-config
          path: redis.conf

---
kind: Service
apiVersion: v1
metadata:
  name: redis
spec:
  selector:
    db: redis
  sessionAffinity: None
  type: NodePort
  ports:
    - nodePort:
      port: 6379
      protocol: TCP
      targetPort: 6379
