k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pace
spec:
  rules:
    - host: pace.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pace
                port:
                  number: 3000
